fix wrap

--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -73,6 +73,7 @@
     &_filters {
       width: 95%;
       display: flex;
+      flex-wrap: wrap;
 
       margin: 0 auto;
       gap: 10px;
